<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
android:background="@color/white"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.SecondFragment">



    <TextView
        android:id="@+id/firstName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/first_name"
        android:textColor="@color/teal_200"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textColor="@color/teal_200"
        android:textSize="20sp"
        android:text="@string/percent"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/firstName"
        app:layout_constraintStart_toStartOf="@id/firstName"
        app:layout_constraintTop_toBottomOf="@id/firstName" />
    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/good_choice"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/secondName"
        app:layout_constraintStart_toStartOf="@id/secondName"
        app:layout_constraintTop_toBottomOf="@id/secondName" />

    <TextView
        android:id="@+id/secondName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/second_name"
        android:textColor="@color/teal_200"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/percent"
        app:layout_constraintStart_toStartOf="@id/percent"
        app:layout_constraintTop_toBottomOf="@id/percent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/tryAgainBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#710CD6"
        android:text="@string/again"
        app:cornerRadius="12dp"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="@id/secondName"
        app:layout_constraintStart_toStartOf="@id/secondName"
        app:layout_constraintTop_toBottomOf="@id/secondName" />





</androidx.constraintlayout.widget.ConstraintLayout>